--- a/style.css
+++ b/style.css
@@ -1,41 +1,184 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-body{
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: rgb(236, 236, 236);
+:root{
+    --color1: #9ae700;
+    --bg1: linear-gradient(90deg, orange, orangered);
 }
 
-main{
-    margin: 5em 5em;
+body{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    object-fit: cover;
+    animation: animate 19s alternate infinite;
+    transition: 3s ease-in-out;
+    letter-spacing: 0.5px;
+    font-family: 'Poppins', sans-serif;
+    overflow: hidden;
 }
+@keyframes animate {
+    0%{
+        background-image: url("../calculateur/Images/Fond2.jpg");
+    }
+    30%{
+        background-image: url("../calculateur/Images/Fond1.jpg");
+    }
+    50%{
+        background-image: url("../calculateur/Images/Fond1.jpg");
+    }
+    80%{
+        background-image: url("../calculateur/Images/Fond2.jpg");
+    }
+    100%{
+        background-image: url("../calculateur/Images/Fond1.jpg");
+    }
+}
+
 main div{
     display: flex;
-    flex-direction: column;
-    gap: 1em;
-   background: white;
-   outline: 1px solid rgb(208, 208, 208);
-   width: 45%;
-   padding: 3em;
+    flex-direction: row;
+    justify-content: space-between;
 }
-main div article{
+main div section{
+    position: absolute;
+}
+main div fieldset{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5em;
+   backdrop-filter: blur(15px);
+   border-radius: 1em;
+   background: transparent;
+   outline: 3px solid #fff;
+   border: none;
+   width: 45%;
+   padding: 0.3em;
+   margin: 0.7em;
+}
+main div fieldset legend{
+    display: flex;
+    flex-direction: row;
+    gap: 0.5em;
+    text-align: left;
+    padding-inline: 0.5em;
+}
+#svg{
+    fill: #fff;
+    cursor: pointer;
+}
+#svg:hover{
+    fill: var(--color1);
+}
+main div fieldset legend article svg{
+    margin-top: 0.3em;
+    margin-left: 14em;
+}
+main div fieldset legend span:nth-child(2) h3{
+    margin-top: 0.5em;
+    background-image: linear-gradient(40deg, #232323, #232323);
+    background-clip: text;
+    -webkit-text-stroke-color: transparent;
+    -webkit-text-stroke-width: calc(1.5em/16);
+    -webkit-background-clip: text;
+    color: white;
+    font-size: 3.5vmin;
+    padding: calc(calc(2em/16)/2);
+    letter-spacing: calc(0.5em/8);
+    font-weight: 700;
+    text-transform: uppercase;
+}
+main div fieldset article{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     gap: 1.5em;
 }
-main div article label{
+main div fieldset article label{
     display: flex;
     flex-direction: column;
-    gap: 0.1em;
+    gap: 0.4em;
+    color:#fff;
+}
+main div fieldset article label p{
+    z-index: 999;
 }
 input{
-    padding: 0.5em;
+    padding: 0.9em;
+    width: 16em;
+    background: transparent;
+    border: none;
+    outline: none;
+    border-left: 2px solid #fff;
+    color: #fff;
+    letter-spacing: 1px;
+}
+#input-border{
+    display: flex;
+    flex-direction: row;
+    gap: 0.8em;
+    background: transparent;
+    border: none;
+    outline: 2px solid #fff;
+    color: #fff;
+    border-radius: 0.5em;
+    box-shadow: 0 0 3px rgb(75, 75, 75);
+    padding: 5px;
+}
+input:focus{
+    border-left: 2px solid #fff;
+    outline: none;
 }
 button{
-    padding: 1em;
-    width: 35%;
+    display: flex;
+    flex-direction: row;
+    gap: 0.7em;
+    padding: 1.1em;
+    width: 17em;
+    border-radius: 0.8em;
+    border: 2px solid #fff;
+    background: var(--bg1);
+    text-transform: uppercase;
+    font-weight: 700;
+    color: white;
+    cursor: pointer;
+    margin-top: 1em;
+    letter-spacing: 0.2em;
+    justify-content: center;
+    cursor: pointer;
+}
+button:active{
+    transform: scale(0.98);
+}
+button span:nth-child(2){
+    margin-top: 0.5em;
+}
+select{
+    width: 16em;
+    padding: 0.9em;
+    background: transparent;
+    border: none;
+    outline: none;
+    border-left: 2px solid #fff;
+    color: #fff;
+}
+#icon{
+    font-size: 1.4em;
+    margin-top: 0.3em;
+    margin-left: 0.5em;
+}
+#icon-size{
+    font-size: 1.9em;
+    display: block;
+}
+#img-size{
+   width: 2.1em;
+   height: auto;
+   display: none;
 }
