--- a/style.css
+++ b/style.css
@@ -1,94 +1,108 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-:root{
+:root {
     --color1: #9ae700;
     --color2: #00d0d3;
     --bg1: linear-gradient(90deg, orange, orangered);
 }
-form{
-   display: flex;
-   flex-direction: column;
-   gap: 1em;
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
 
-body{
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     object-fit: cover;
-    animation: animate 19s alternate infinite;
+    /* animation: animate 19s alternate infinite; */
+    background: silver;
     transition: 3s ease-in-out;
     letter-spacing: 0.5px;
     font-family: 'Poppins', sans-serif;
     background-image: url("../calculateur/Images/Fond2.jpg") !important;
     overflow: hidden;
 }
+
 @keyframes animate {
-    0%{
+    0% {
         background-image: url("../calculateur/Images/Fond2.jpg") !important;
     }
-    30%{
+
+    30% {
         background-image: url("../calculateur/Images/Fond1.jpg") !important;
     }
-    50%{
+
+    50% {
         background-image: url("../calculateur/Images/Fond1.jpg") !important;
     }
-    80%{
+
+    80% {
         background-image: url("../calculateur/Images/Fond2.jpg") !important;
     }
-    100%{
+
+    100% {
         background-image: url("../calculateur/Images/Fond1.jpg") !important;
     }
 }
 
-main div{
+main div {
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin-top: 0.5em;
 }
-main div section{
+
+main div section {
     position: absolute;
 }
-main div fieldset{
+
+main div fieldset {
     display: flex;
     flex-direction: column;
     gap: 1.5em;
-   backdrop-filter: blur(15px);
-   border-radius: 1em;
-   background: transparent;
-   outline: 3px solid #fff;
-   border: none;
-   width: 45%;
-   padding: 0.5em;
-   margin: 0.5em;
+    backdrop-filter: blur(15px);
+    border-radius: 1em;
+    background: transparent;
+    outline: 3px solid #fff;
+    border: none;
+    width: 45%;
+    padding: 0.5em;
+    margin: 0.5em;
 }
-main div fieldset legend{
+
+main div fieldset legend {
     display: flex;
     flex-direction: row;
     gap: 0.5em;
     text-align: left;
     padding-inline: 0.5em;
 }
-#svg{
+
+#svg {
     fill: #fff;
     cursor: pointer;
 }
-#svg:hover{
+
+#svg:hover {
     fill: var(--color1);
 }
-main div fieldset legend article svg{
+
+main div fieldset legend article svg {
     margin-top: 0.3em;
     margin-left: 14em;
 }
-main div fieldset legend span:nth-child(2) h3{
+
+main div fieldset legend span:nth-child(2) h3 {
     margin-top: 0.5em;
     background-image: linear-gradient(40deg, #232323, #232323);
     background-clip: text;
@@ -102,22 +116,26 @@ main div fieldset legend span:nth-child(2) h3{
     font-weight: 700;
     text-transform: uppercase;
 }
-main div fieldset article{
+
+main div fieldset article {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     gap: 1.5em;
 }
-main div fieldset article label{
+
+main div fieldset article label {
     display: flex;
     flex-direction: column;
     gap: 0.4em;
-    color:#fff;
+    color: #fff;
 }
-main div fieldset article label p{
+
+main div fieldset article label p {
     z-index: 999;
 }
-input{
+
+input {
     padding: 0.9em;
     width: 16em;
     background: transparent;
@@ -127,7 +145,8 @@ input{
     color: #fff;
     letter-spacing: 1px;
 }
-#input-border{
+
+#input-border {
     display: flex;
     flex-direction: row;
     gap: 0.8em;
@@ -139,11 +158,13 @@ input{
     box-shadow: 0 0 3px rgb(75, 75, 75);
     padding: 5px;
 }
-input:focus{
+
+input:focus {
     border-left: 2px solid #fff;
     outline: none;
 }
-figure{
+
+figure {
     display: flex;
     flex-direction: row;
     gap: 0.7em;
@@ -162,17 +183,21 @@ figure{
     cursor: pointer;
     margin-bottom: 2em;
 }
-figure:active{
+
+figure:active {
     transform: scale(0.98);
 }
-figure span:nth-child(2){
+
+figure span:nth-child(2) {
     margin-top: 0.5em;
 }
-#calculer span:nth-child(2){
+
+#calculer span:nth-child(2) {
     margin-top: 0.1em;
     font-weight: 400;
 }
-select{
+
+select {
     width: 16em;
     padding: 0.9em;
     background: transparent;
@@ -181,14 +206,17 @@ select{
     border-left: 2px solid #fff;
     color: #fff;
 }
-option{
+
+option {
     color: var(--color2);
     font-size: 1em;
 }
-option:checked{
+
+option:checked {
     background: var(--color1);
     color: #fff;
 }
+
 /* Ajoutez les icônes aux options du menu déroulant */
 option[data-icon="bus"] {
     background-image: url('../calculateur/icon/tee\ shirt.jpg');
@@ -201,24 +229,29 @@ option[data-icon="airplane"] {
 option[data-icon="car"] {
     background-image: url('chemin/vers/votre/icone-voiture.png');
 }
-#icon{
+
+#icon {
     font-size: 1.4em;
     margin-top: 0.3em;
     margin-left: 0.5em;
 }
-#icon-size{
+
+#icon-size {
     font-size: 1.7em;
     display: block;
 }
-#img-size{
-   width: 1.8em;
-   height: auto;
-   display: none;
-}
-.pop{
+
+#img-size {
+    width: 1.8em;
+    height: auto;
     display: none;
 }
-#close{
+
+.pop {
+    display: none;
+}
+
+#close {
     position: absolute;
     top: 2.5%;
     left: 88%;
@@ -230,7 +263,8 @@ option[data-icon="car"] {
     border: 2px solid #fff;
     cursor: pointer;
 }
-.pop section{
+
+.pop section {
     background: #fff;
     position: absolute;
     top: 10%;
@@ -245,36 +279,44 @@ option[data-icon="car"] {
     padding-bottom: 3em;
     animation: anima 0.8s alternate forwards;
 }
-@keyframes anima{
-    0%{
-        
+
+@keyframes anima {
+    0% {
+
         transform: scale(0);
     }
-    100%{
-        
+
+    100% {
+
         transform: scale(1);
     }
 }
-.scale section{
+
+.scale section {
     animation: animo 0.4s alternate forwards;
 }
-@keyframes animo{
-    0%{
-        
+
+@keyframes animo {
+    0% {
+
         transform: scale(1);
     }
-    100%{
-        
+
+    100% {
+
         transform: scale(0);
     }
 }
-.pop section article:nth-child(1){
-text-align: center;
+
+.pop section article:nth-child(1) {
+    text-align: center;
 }
-.pop section article:nth-child(1) h3{
+
+.pop section article:nth-child(1) h3 {
     font-size: 2em;
 }
-.pop section article:nth-child(2){
+
+.pop section article:nth-child(2) {
     overflow: scroll;
     height: 30vh;
     overflow-x: hidden;
@@ -283,78 +325,91 @@ text-align: center;
     margin-top: 0.7em;
     margin-bottom: 1.5em;
 }
- .pop section article:nth-child(2)::-webkit-scrollbar{
+
+.pop section article:nth-child(2)::-webkit-scrollbar {
     background: none;
     border-radius: 2em;
     width: 0.5em;
 }
-.pop section article:nth-child(2)::-webkit-scrollbar-thumb{
+
+.pop section article:nth-child(2)::-webkit-scrollbar-thumb {
     background: none;
     border-radius: 5em;
 }
-.content::-webkit-scrollbar{
+
+.content::-webkit-scrollbar {
     background: rgb(243, 243, 243);
     border-radius: 2em;
     width: 0.6em;
 }
-.content::-webkit-scrollbar-thumb{
+
+.content::-webkit-scrollbar-thumb {
     background: var(--bg1);
     border-radius: 5em;
 }
+
 .content {
     display: none;
-  }
+}
 
-  .content.active {
+.content.active {
     display: block;
-  }
-#desc-1{
+}
+
+#desc-1 {
     overflow: hidden;
     animation: text 1s normal forwards;
-    word-break:keep-all;
+    word-break: keep-all;
     word-wrap: break-word;
     font-size: 0.9em;
     line-height: 2em;
     margin-top: 0.7em;
 }
-@keyframes text{
-    0%{
+
+@keyframes text {
+    0% {
         height: 0%;
     }
-    100%{
+
+    100% {
         height: 100%;
     }
 }
-#desc-2{
+
+#desc-2 {
     overflow-x: hidden;
     animation: text 1s normal forwards;
-    word-break:keep-all;
+    word-break: keep-all;
     word-wrap: break-word;
     font-size: 0.9em;
     line-height: 2em;
     padding-right: 0.5em;
 }
-#desc-3{
+
+#desc-3 {
     overflow-x: hidden;
     animation: text 1s normal forwards;
-    word-break:keep-all;
+    word-break: keep-all;
     word-wrap: break-word;
     font-size: 0.9em;
     line-height: 2em;
 }
-.pagination-slide{
+
+.pagination-slide {
     margin-top: 2.3em;
     display: flex;
     flex-direction: row;
     gap: 1.5em;
     justify-content: center;
 }
-.pagination-slide a{
+
+.pagination-slide a {
     color: #232323;
     font-weight: 600;
     text-decoration: none;
 }
-.pagination-slide a span{
+
+.pagination-slide a span {
     width: 15%;
     height: 10%;
     background: #fff;
@@ -364,20 +419,23 @@ text-align: center;
     outline: 1.5px solid rgb(0, 136, 189);
     transition: 0.2s;
 }
-.pagination-slide a span:hover{
-    background: rgb(0, 136, 189);
-    color: #fff;
-}
-.pagination-slide a.active{
+
+.pagination-slide a span:hover {
     background: rgb(0, 136, 189);
     color: #fff;
 }
 
-#resultat{
+.pagination-slide a.active {
+    background: rgb(0, 136, 189);
+    color: #fff;
+}
+
+#resultat {
     text-align: center;
     position: absolute;
 }
-#resultat div{
+
+#resultat div {
     display: flex;
     flex-direction: column;
     background: #fff;
@@ -387,17 +445,19 @@ text-align: center;
     padding: 1em;
     border-radius: 0.5em;
 }
-@keyframes resultat{
-    0%{
+
+@keyframes resultat {
+    0% {
         clip-path: circle(0);
         transform: rotate(720deg);
     }
-    100%{
+
+    100% {
         clip-path: circle(10);
         transform: rotate(0deg);
     }
 }
 
-.filter{
+.filter {
     opacity: 0;
 }
